connected to mongoDB atlas and made api

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.10.9",
     "next": "^9.5.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "tailwindcss": "^1.8.13"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "tailwindcss": "^1.9.2"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.7.0"
