--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^9.5.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-image-gallery": "^1.0.8",
     "tailwindcss": "^1.9.2"
   },
   "devDependencies": {
