--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@auth0/nextjs-auth0": "0.16.0",
+    "@auth0/nextjs-auth0": "^1.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "dotenv": "^8.2.0",
     "mongoose": "^5.10.9",
-    "next": "^9.5.5",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "next": "^12.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-image-gallery": "^1.0.8",
     "tailwindcss": "^1.9.2"
   },
